--- a/weatherAPI.html
+++ b/weatherAPI.html
@@ -54,13 +54,13 @@
     	// You will need to update this query with the city, weather format (Celsius or Fahrenheit) and your OpenWeatherMap ID
 
     	// Right now I have it set to Chicago.  The default should be Ann Abor/Fahreheit.
-		let query = "http://api.openweathermap.org/data/2.5/weather?q=" +city+"&APPID="+YourWeatherAppID+"&units="+units;
+		let query = "https://api.openweathermap.org/data/2.5/weather?q=" +city+"&APPID="+YourWeatherAppID+"&units="+units;
         console.log("Query is :" + query);
 
         $.getJSON(query,function(json){
 					var iconcode = json.weather[0]["icon"];
 					console.log(iconcode)
-					var iconurl = "http://openweathermap.org/img/wn/" + iconcode + ".png";
+					var iconurl = "https://openweathermap.org/img/wn/" + iconcode + ".png";
             console.log(JSON.stringify(json));
 						$("#temp").html(json["main"].temp);
 						$("#high").html(json["main"].temp_max);
